--- a/home/wiki/Change_log/2013.html
+++ b/home/wiki/Change_log/2013.html
@@ -457,7 +457,7 @@
         (add) Server: Added alpha HTTP server {contributed by Mattze96 }. See: <a href="http://xowa.org/home/wiki/App/Xtn/Browser/HTTP_Server.html" id="xolnki_8" title="App/Xtn/Browser/HTTP Server">App/Xtn/Browser/HTTP_Server</a>
       </li>
       <li>
-        (add) Translation: Added translations for Simplified Chinese and Traditional Chinese {contributed by zjzengdongyang}. See: <a href="http://xowa.org/home/wiki/Options/Language.html" id="xolnki_9" title="Options/Language">Options/Language</a>
+        (add) Translation: Added translations for Simplified Chinese and Traditional Chinese {contributed by zjzengdongyang}. See: <a href="http://xowa.org/home/wiki/Options/Language.html" id="xolnki_9" title="Options/Language" class="xowa-visited">Options/Language</a>
       </li>
     </ul>
     <p>
