--- a/home/wiki/Change_log/2014.html
+++ b/home/wiki/Change_log/2014.html
@@ -587,7 +587,7 @@
     </p>
     <ul>
       <li>
-        Options: Fix UI language staying as English after reloading XOWA. See: <a href="http://xowa.org/home/wiki/Options/Language.html" id="xolnki_5" title="Options/Language">Options/Language</a>
+        Options: Fix UI language staying as English after reloading XOWA. See: <a href="http://xowa.org/home/wiki/Options/Language.html" id="xolnki_5" title="Options/Language" class="xowa-visited">Options/Language</a>
       </li>
     </ul>
     <p>
@@ -2215,7 +2215,7 @@
     </p>
     <ul>
       <li>
-        Gui.Tabs: Fix tab options not restored for Tab Height, Close Visible and Unselected Close Visible. See: <a href="http://xowa.org/home/wiki/Options/Tabs.html" id="xolnki_35" title="Options/Tabs">Options/Tabs</a> [broken since:start]
+        Gui.Tabs: Fix tab options not restored for Tab Height, Close Visible and Unselected Close Visible. See: <a href="http://xowa.org/home/wiki/Options/Tabs.html" id="xolnki_35" title="Options/Tabs" class="xowa-visited">Options/Tabs</a> [broken since:start]
       </li>
       <li>
         Options: Escape HTML characters in &lt;textarea&gt; (affects content code format incorrectly using "&lt;pre&gt;"). See: <a href="http://xowa.org/home/wiki/Options/Wiki/HTML.html" id="xolnki_36" title="Options/Wiki/HTML">Options/Wiki/HTML</a>
@@ -2238,7 +2238,7 @@
         Javascript: Add option to control default show / hide state of NavFrames. See: <a href="http://xowa.org/home/wiki/Options/Wiki/HTML.html" id="xolnki_41" title="Options/Wiki/HTML">Options/Wiki/HTML</a> <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/NavFrame.html" id="xolnki_42" title="Diagnostics/Javascript/NavFrame">Diagnostics/Javascript/NavFrame</a>
       </li>
       <li>
-        Gui.Tab: Add option to hide tab bar if 1 or 0 tabs {suggested by Schnark}. See: <a href="http://xowa.org/home/wiki/Options/Tabs.html" id="xolnki_43" title="Options/Tabs">Options/Tabs</a>
+        Gui.Tab: Add option to hide tab bar if 1 or 0 tabs {suggested by Schnark}. See: <a href="http://xowa.org/home/wiki/Options/Tabs.html" id="xolnki_43" title="Options/Tabs" class="xowa-visited">Options/Tabs</a>
       </li>
       <li>
         Gui.Url_bar: Add shortcut to open multiple lines in separate tabs; EX:Copy "a\nb" to clipboard -&gt; Ctrl + Enter.
@@ -2554,10 +2554,10 @@
         Gui: Support customizable keyboard shortcuts. See: <a href="http://xowa.org/home/wiki/Options/Shortcuts.html" id="xolnki_55" title="Options/Shortcuts">Options/Shortcuts</a>
       </li>
       <li>
-        Gui: Update UI language dynamically (do not require restart). See: <a href="http://xowa.org/home/wiki/Options/Language.html" id="xolnki_56" title="Options/Language">Options/Language</a>
+        Gui: Update UI language dynamically (do not require restart). See: <a href="http://xowa.org/home/wiki/Options/Language.html" id="xolnki_56" title="Options/Language" class="xowa-visited">Options/Language</a>
       </li>
       <li>
-        Gui: Expand number of available UI languages. See: <a href="http://xowa.org/home/wiki/Options/Language.html" id="xolnki_57" title="Options/Language">Options/Language</a>
+        Gui: Expand number of available UI languages. See: <a href="http://xowa.org/home/wiki/Options/Language.html" id="xolnki_57" title="Options/Language" class="xowa-visited">Options/Language</a>
       </li>
       <li>
         Gui: Enable hide / show on table of contents. See: <a href="https://en.wikipedia.org/wiki/Palenque" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Palenque</a>
@@ -2787,7 +2787,7 @@
         Gui: Add popup menu for clicking on file. See: <a href="http://xowa.org/home/wiki/Options/Menus.html" id="xolnki_66" title="Options/Menus">Options/Menus</a>
       </li>
       <li>
-        Gui: Add option for min chars / max chars in tab buttons. See: <a href="http://xowa.org/home/wiki/Options/Tabs.html" id="xolnki_67" title="Options/Tabs">Options/Tabs</a>
+        Gui: Add option for min chars / max chars in tab buttons. See: <a href="http://xowa.org/home/wiki/Options/Tabs.html" id="xolnki_67" title="Options/Tabs" class="xowa-visited">Options/Tabs</a>
       </li>
     </ul>
     <p>
@@ -2890,19 +2890,19 @@
         Gui.Tabs.Buttons: Show url as tooltip.
       </li>
       <li>
-        Gui.Tabs.Buttons: Add option for place on top. See: <a href="http://xowa.org/home/wiki/Options/Tabs.html" id="xolnki_69" title="Options/Tabs">Options/Tabs</a>
+        Gui.Tabs.Buttons: Add option for place on top. See: <a href="http://xowa.org/home/wiki/Options/Tabs.html" id="xolnki_69" title="Options/Tabs" class="xowa-visited">Options/Tabs</a>
       </li>
       <li>
-        Gui.Tabs.Buttons: Add option for tab height. See: <a href="http://xowa.org/home/wiki/Options/Tabs.html" id="xolnki_70" title="Options/Tabs">Options/Tabs</a>
+        Gui.Tabs.Buttons: Add option for tab height. See: <a href="http://xowa.org/home/wiki/Options/Tabs.html" id="xolnki_70" title="Options/Tabs" class="xowa-visited">Options/Tabs</a>
       </li>
       <li>
-        Gui.Tabs.Buttons: Add option for curved button. See: <a href="http://xowa.org/home/wiki/Options/Tabs.html" id="xolnki_71" title="Options/Tabs">Options/Tabs</a>
+        Gui.Tabs.Buttons: Add option for curved button. See: <a href="http://xowa.org/home/wiki/Options/Tabs.html" id="xolnki_71" title="Options/Tabs" class="xowa-visited">Options/Tabs</a>
       </li>
       <li>
-        Gui.Tabs.Buttons: Add option for close button visible. See: <a href="http://xowa.org/home/wiki/Options/Tabs.html" id="xolnki_72" title="Options/Tabs">Options/Tabs</a>
+        Gui.Tabs.Buttons: Add option for close button visible. See: <a href="http://xowa.org/home/wiki/Options/Tabs.html" id="xolnki_72" title="Options/Tabs" class="xowa-visited">Options/Tabs</a>
       </li>
       <li>
-        Gui.Tabs.Buttons: Add option for unselected close button visible. See: <a href="http://xowa.org/home/wiki/Options/Tabs.html" id="xolnki_73" title="Options/Tabs">Options/Tabs</a>
+        Gui.Tabs.Buttons: Add option for unselected close button visible. See: <a href="http://xowa.org/home/wiki/Options/Tabs.html" id="xolnki_73" title="Options/Tabs" class="xowa-visited">Options/Tabs</a>
       </li>
     </ul>
     <p>
