--- a/home/wiki/Change_log/v3.7.1.1.html
+++ b/home/wiki/Change_log/v3.7.1.1.html
@@ -2,7 +2,7 @@
 <html dir="ltr">
 <head>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-  <title>Blog - XOWA</title>
+  <title>Change log/v3.7.1.1 - XOWA</title>
   <link rel="shortcut icon" href="https://gnosygnu.github.io/xowa/xowa_logo.png" />
   <link rel="stylesheet" href="https://gnosygnu.github.io/xowa/xowa_common.css" type="text/css">
   
@@ -11,45 +11,12 @@
 <div id="mw-page-base" class="noprint"></div>
 <div id="mw-head-base" class="noprint"></div>
 <div id="content" class="mw-body">
-  <h1 id="firstHeading" class="firstHeading"><span>Blog</span></h1>
+  <h1 id="firstHeading" class="firstHeading"><span>Change log/v3.7.1.1</span></h1>
   <div id="bodyContent" class="mw-body-content">
     <div id="siteSub">From XOWA: the free, open-source, offline wiki application</div>
     <div id="contentSub"></div>
     <div id="mw-content-text" lang="en" dir="ltr" class="mw-content-ltr">
     
-    <div class='infobox plainlinks' style='width:70px;'>
-      <p>
-        <span style='font-size:15px;font-weight:bold;'>Blog links</span><br>
-        <br>
-        2016<br>
-      </p>
-      <ul>
-        <li>
-          <b>2016-07</b>
-        </li>
-        <li>
-          <a href="http://xowa.org/home/wiki/Blog/2016-06.html" id="xolnki_3" title="Blog/2016-06" class="xowa-visited">2016-06</a>
-        </li>
-        <li>
-          <a href="http://xowa.org/home/wiki/Blog/2016-05.html" id="xolnki_4" title="Blog/2016-05" class="xowa-visited">2016-05</a>
-        </li>
-        <li>
-          <a href="http://xowa.org/home/wiki/Blog/2016-04.html" id="xolnki_5" title="Blog/2016-04" class="xowa-visited">2016-04</a>
-        </li>
-        <li>
-          <a href="http://xowa.org/home/wiki/Blog/2016-03.html" id="xolnki_6" title="Blog/2016-03">2016-03</a>
-        </li>
-        <li>
-          <a href="http://xowa.org/home/wiki/Blog/2016-02.html" id="xolnki_7" title="Blog/2016-02">2016-02</a>
-        </li>
-        <li>
-          <a href="http://xowa.org/home/wiki/Blog/2016-01.html" id="xolnki_8" title="Blog/2016-01">2016-01</a>
-        </li>
-      </ul>
-      <p>
-        <a href="http://xowa.org/home/wiki/Blog/Archives.html" id="xolnki_9" title="Blog/Archives">Archives</a>
-      </p>
-    </div>
     <div id="toc" class="toc">
       <div id="toctitle">
         <h2>
@@ -58,86 +25,215 @@
       </div>
       <ul>
         <li class="toclevel-1 tocsection-1">
-          <a href="#Release:_v3.7.1.1_.282016-07-03_18:00_Sun.29"><span class="tocnumber">1</span> <span class="toctext">Release: v3.7.1.1 (2016-07-03 18:00 Sun)</span></a> 
+          <a href="#v3.7.1.1_.282017-07-03.29"><span class="tocnumber">1</span> <span class="toctext">v3.7.1.1 (2017-07-03)</span></a> 
           <ul>
             <li class="toclevel-2 tocsection-2">
-              <a href="#.28Wiki.29_2016-06_German_Wiktionary.2C_Wikisource.2C_Wikivoyage.2C_Wikiquote.2C_Wikibooks.2C_Wikiversity.2C_and_Wikinews"><span class="tocnumber">1.1</span> <span class="toctext">(Wiki) 2016-06 German Wiktionary, Wikisource, Wikivoyage, Wikiquote, Wikibooks, Wikiversity, and Wikinews</span></a>
+              <a href="#Wiki"><span class="tocnumber">1.1</span> <span class="toctext">Wiki</span></a>
             </li>
             <li class="toclevel-2 tocsection-3">
-              <a href="#.28PC.29_Support_Gallery"><span class="tocnumber">1.2</span> <span class="toctext">(PC) Support Gallery</span></a>
+              <a href="#PC"><span class="tocnumber">1.2</span> <span class="toctext">PC</span></a>
             </li>
             <li class="toclevel-2 tocsection-4">
-              <a href="#.28PC_.26_Android.29_More_minor_fixes_for_Download_Central_including_connection_disruption_and_WAKE_LOCK_fixes"><span class="tocnumber">1.3</span> <span class="toctext">(PC &amp; Android) More minor fixes for Download Central including connection disruption and WAKE_LOCK fixes</span></a>
+              <a href="#Android"><span class="tocnumber">1.3</span> <span class="toctext">Android</span></a>
             </li>
             <li class="toclevel-2 tocsection-5">
-              <a href="#.28Android.29_Multiple_fixes_for_severe_crashes"><span class="tocnumber">1.4</span> <span class="toctext">(Android) Multiple fixes for severe crashes</span></a>
-            </li>
-            <li class="toclevel-2 tocsection-6">
-              <a href="#Next_release:_v3.7.2"><span class="tocnumber">1.5</span> <span class="toctext">Next release: v3.7.2</span></a>
+              <a href="#Dev"><span class="tocnumber">1.4</span> <span class="toctext">Dev</span></a>
             </li>
           </ul>
         </li>
       </ul>
     </div>
     <h2>
-      <span class="mw-headline" id="Release:_v3.7.1.1_.282016-07-03_18:00_Sun.29">Release: v3.7.1.1 (2016-07-03 18:00 Sun)</span>
+      <span class="mw-headline" id="v3.7.1.1_.282017-07-03.29">v3.7.1.1 (2017-07-03)</span>
     </h2>
-    <p>
-      The PC version is a minor release. It adds Gallery support for HTML dtabases.
-    </p>
-    <p>
-      The Android version is a minor release. It fixes a number of severe crashes for outlier situations.
-    </p>
     <h3>
-      <span class="mw-headline" id=".28Wiki.29_2016-06_German_Wiktionary.2C_Wikisource.2C_Wikivoyage.2C_Wikiquote.2C_Wikibooks.2C_Wikiversity.2C_and_Wikinews">(Wiki) 2016-06 German Wiktionary, Wikisource, Wikivoyage, Wikiquote, Wikibooks, Wikiversity, and Wikinews</span>
+      <span class="mw-headline" id="Wiki">Wiki</span>
     </h3>
-    <p>
-      These wikis are available at <a href="http://xowa.org/home/wiki/Special:XowaDownloadCentral.html" id="xolnki_10" title="Special:XowaDownloadCentral" class="xowa-visited">Download Central</a>.
-    </p>
-    <h3>
-      <span class="mw-headline" id=".28PC.29_Support_Gallery">(PC) Support Gallery</span>
-    </h3>
-    <p>
-      On the PC, the HTML databaes showed Galleries vertically and with incorrect styles (no gray border box).
-    </p>
-    <p>
-      This build fixes some galleries for the existing 2016-06 wikis. Unfortunately, the other galleries can only be fixed in the next HTML dump: 2016-07 and beyond.
-    </p>
-    <h3>
-      <span class="mw-headline" id=".28PC_.26_Android.29_More_minor_fixes_for_Download_Central_including_connection_disruption_and_WAKE_LOCK_fixes">(PC &amp; Android) More minor fixes for Download Central including connection disruption and WAKE_LOCK fixes</span>
-    </h3>
-    <p>
-      There are basically two types of fixes:
-    </p>
     <ul>
       <li>
-        <b>Show error when downloading</b>: A user reported intermittent problems with download central: <a href="https://github.com/gnosygnu/xowa/issues/63" rel="nofollow" class="external free">https://github.com/gnosygnu/xowa/issues/63</a> . A little later in the week, I discovered archive.org can sometimes drop a connection after a few hours. In these cases, XOWA would just stop without any indication. This version prints status messages to the screen, and also allows the user to resume
-      </li>
-      <li>
-        <b>Android would sometimes time out</b>: Android sometimes stops XOWA while downloading. This version allows XOWA to keep Android awake (WAKE_LOCK) until downloads finish.
+        Wiki: Publish 2016-06 German Wiktionary, Wikisource, Wikivoyage, Wikiquote, Wikibooks, Wikiversity, and Wikinews.
       </li>
     </ul>
     <h3>
-      <span class="mw-headline" id=".28Android.29_Multiple_fixes_for_severe_crashes">(Android) Multiple fixes for severe crashes</span>
+      <span class="mw-headline" id="PC">PC</span>
     </h3>
     <p>
-      There were a number of fixes for crashes in uncommon scenarios. Most of these involved switching SD cards, or deleting wikis outside XOWA. The crash was bad enough such that XOWA would not work unless the Storage files were cleared (or XOWA was reinstalled).
+      <b>major</b>
     </p>
+    <ul>
+      <li>
+        HtmlView: Support Gallery.
+      </li>
+    </ul>
+    <dl>
+      <dd>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikipedia.org/wiki/Édouard_Manet" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Édouard_Manet</a> <a href="https://en.wikipedia.org/wiki/List_of_tallest_buildings_in_the_world" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/List_of_tallest_buildings_in_the_world</a> <a href="https://en.wikipedia.org/wiki/National_Gallery_of_Art" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/National_Gallery_of_Art</a>
+      </dd>
+    </dl>
+    <ul>
+      <li>
+        DownloadCentral: Show error message if error during download; also allow resume.
+      </li>
+    </ul>
     <p>
-      These are fixed in this version. For more info, see the <a href="http://xowa.org/home/wiki/Change_log.html" id="xolnki_11" title="Change log">Change log</a>
+      <b>minor</b>
     </p>
+    <ul>
+      <li>
+        UI: Add Ctrl+P as default keyboard shortcut for Print.
+      </li>
+    </ul>
+    <ul>
+      <li>
+        UI: Automatically save zoom level when using Ctrl+Wheel_Up, Ctrl+Wheel_Down. {detected by Ope30}
+      </li>
+    </ul>
+    <ul>
+      <li>
+        UI: Restore font size for tab buttons.
+      </li>
+    </ul>
+    <p>
+      <b>trivial</b>
+    </p>
+    <ul>
+      <li>
+        Log: Add logging statements for search.
+      </li>
+    </ul>
+    <ul>
+      <li>
+        Hzip: Skip manual &lt;h2&gt; if &lt;span&gt; does not have id.
+      </li>
+    </ul>
+    <dl>
+      <dd>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://fr.wikipedia.org/wiki/Portail:Nord-Amérindiens/Image_sélectionnée" rel="nofollow" class="external free">https://fr.wikipedia.org/wiki/Portail:Nord-Amérindiens/Image_sélectionnée</a>
+      </dd>
+    </dl>
+    <ul>
+      <li>
+        Hzip: Skip manual &lt;h2&gt; if &lt;h2&gt; has atrs.
+      </li>
+    </ul>
+    <dl>
+      <dd>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://fr.wikipedia.org/wiki/Wikipédia:LiveRC/ToDo" rel="nofollow" class="external free">https://fr.wikipedia.org/wiki/Wikipédia:LiveRC/ToDo</a>
+      </dd>
+    </dl>
     <h3>
-      <span class="mw-headline" id="Next_release:_v3.7.2">Next release: v3.7.2</span>
+      <span class="mw-headline" id="Android">Android</span>
+    </h3>
+    <p>
+      <b>major</b>
+    </p>
+    <ul>
+      <li>
+        Setup: Detect external storage card for certain devices (BLU-STUDIO C 5+5 LTE).
+      </li>
+    </ul>
+    <dl>
+      <dd>
+        <span style='font-variant:small-caps'>Resolved by</span>: Try "SECONDARY_STORAGE" environment variable if present.
+      </dd>
+    </dl>
+    <p>
+      <b>major</b>
+    </p>
+    <ul>
+      <li>
+        DownloadCentral: Fix WAKE_LOCK not being acquired / released.
+      </li>
+    </ul>
+    <dl>
+      <dd>
+        <span style='font-variant:small-caps'>Resolved by</span>: Always release WAKE_LOCK when task is done; remove WAKE_LOCK from internal hash.
+      </dd>
+    </dl>
+    <ul>
+      <li>
+        DownloadCentral: Fix negative progress when restarting after failed task.
+      </li>
+    </ul>
+    <dl>
+      <dd>
+        <span style='font-variant:small-caps'>Resolved by</span>: Reset progress at cmd level upon failure.
+      </dd>
+    </dl>
+    <ul>
+      <li>
+        Log: Retain only most recent 8 log files.
+      </li>
+    </ul>
+    <ul>
+      <li>
+        General: Do not crash when opening new tab and English Wikipedia is not installed.
+      </li>
+    </ul>
+    <dl>
+      <dd>
+        <span style='font-variant:small-caps'>Resolved by</span>: Use 1st installed wiki if English Wikipedia is not available.
+      </dd>
+    </dl>
+    <ul>
+      <li>
+        General: Do not crash when reloading page but SD card has been removed.
+      </li>
+    </ul>
+    <dl>
+      <dd>
+        <span style='font-variant:small-caps'>Resolved by</span>: Add try / catch to Page__on_load_end.
+      </dd>
+    </dl>
+    <ul>
+      <li>
+        General: Do not crash when opening wiki but wiki has been deleted.
+      </li>
+    </ul>
+    <dl>
+      <dd>
+        <span style='font-variant:small-caps'>Resolved by</span>: Add try / catch to OfflinePageStrategy.
+      </dd>
+    </dl>
+    <ul>
+      <li>
+        General: Do not crash when reloading tab but page does not exist.
+      </li>
+    </ul>
+    <p>
+      <b>trivial</b>
+    </p>
+    <ul>
+      <li>
+        Redlinks: Fix null ref in logs when opening special pages.
+      </li>
+    </ul>
+    <dl>
+      <dd>
+        <span style='font-variant:small-caps'>Resolved by</span>: Set "en" as language for home wiki.
+      </dd>
+    </dl>
+    <h3>
+      <span class="mw-headline" id="Dev">Dev</span>
     </h3>
     <ul>
       <li>
-        <b>Table of contents</b>: I did more work on the TOC, but wasn't able to integrate it for this release. It should be part of the next one.
+        Source: Fix compilation issues with Eclipse Neon.
       </li>
+    </ul>
+    <dl>
+      <dd>
+        <span style='font-variant:small-caps'>Resolved by</span>: Split classes into separate files.
+      </dd>
+    </dl>
+    <ul>
       <li>
-        <b>Redlinks for HTTP Server</b>: This also didn't make it into this release.
+        Source: Refactor gallery classes.
       </li>
+    </ul>
+    <ul>
       <li>
-        <b>Wikis</b>: I'm working on French next and adding them to Download Central.
+        Source: Make Xop_amp_mgr thread safe.
       </li>
     </ul>
   
