--- a/home/wiki/Help/Download_XOWA.html
+++ b/home/wiki/Help/Download_XOWA.html
@@ -28,10 +28,10 @@
     </h2>
     <ul>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.6.4.2/xowa_app_windows_64_v3.6.4.2.zip" rel="nofollow" class="external text">Windows (64-bit)</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.7.1.1/xowa_app_windows_64_v3.7.1.1.zip" rel="nofollow" class="external text">Windows (64-bit)</a>
       </li>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.6.4.2/xowa_app_windows_v3.6.4.2.zip" rel="nofollow" class="external text">Windows (32-bit)</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.7.1.1/xowa_app_windows_v3.7.1.1.zip" rel="nofollow" class="external text">Windows (32-bit)</a>
       </li>
     </ul>
     <h2>
@@ -39,10 +39,10 @@
     </h2>
     <ul>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.6.4.2/xowa_app_linux_64_v3.6.4.2.zip" rel="nofollow" class="external text">Linux (64-bit)</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.7.1.1/xowa_app_linux_64_v3.7.1.1.zip" rel="nofollow" class="external text">Linux (64-bit)</a>
       </li>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.6.4.2/xowa_app_linux_v3.6.4.2.zip" rel="nofollow" class="external text">Linux (32-bit)</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.7.1.1/xowa_app_linux_v3.7.1.1.zip" rel="nofollow" class="external text">Linux (32-bit)</a>
       </li>
     </ul>
     <h2>
@@ -50,10 +50,10 @@
     </h2>
     <ul>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.6.4.2/xowa_app_macosx_64_v3.6.4.2.zip" rel="nofollow" class="external text">Mac OS X (64-bit)</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.7.1.1/xowa_app_macosx_64_v3.7.1.1.zip" rel="nofollow" class="external text">Mac OS X (64-bit)</a>
       </li>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.6.4.2/xowa_app_macosx_v3.6.4.2.zip" rel="nofollow" class="external text">Mac OS X (32-bit)</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.7.1.1/xowa_app_macosx_v3.7.1.1.zip" rel="nofollow" class="external text">Mac OS X (32-bit)</a>
       </li>
     </ul>
     <h2>
@@ -61,7 +61,7 @@
     </h2>
     <ul>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.6.4.2/xowa_app_arm_v3.6.4.2.zip" rel="nofollow" class="external text">Raspberry Pi</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.7.1.1/xowa_app_arm_v3.7.1.1.zip" rel="nofollow" class="external text">Raspberry Pi</a>
       </li>
     </ul>
     <h2>
@@ -69,7 +69,7 @@
     </h2>
     <ul>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.6.4.1/xowa_app_android_v3.6.4.1.apk" rel="nofollow" class="external text">Android</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.7.1.1/xowa_app_android_v3.7.1.1.apk" rel="nofollow" class="external text">Android</a>
       </li>
     </ul>
     <h2>
@@ -77,7 +77,7 @@
     </h2>
     <ul>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/archive/v3.6.4.2.zip" rel="nofollow" class="external text">Source code (Desktop)</a>
+        <a href="https://github.com/gnosygnu/xowa/archive/v3.7.1.1.zip" rel="nofollow" class="external text">Source code (Desktop)</a>
       </li>
     </ul>
     <h2>
@@ -89,8 +89,16 @@
       </li>
     </ul>
     <h2>
-      <span class="mw-headline" id="v3.6.4.2_.282016-06-27.29">v3.6.4.2 (2016-06-27)</span>
+      <span class="mw-headline" id="v3.7.1.1_.282017-07-03.29">v3.7.1.1 (2017-07-03)</span>
     </h2>
+    <h3>
+      <span class="mw-headline" id="Wiki">Wiki</span>
+    </h3>
+    <ul>
+      <li>
+        Wiki: Publish 2016-06 German Wiktionary, Wikisource, Wikivoyage, Wikiquote, Wikibooks, Wikiversity, and Wikinews.
+      </li>
+    </ul>
     <h3>
       <span class="mw-headline" id="PC">PC</span>
     </h3>
@@ -99,22 +107,17 @@
     </p>
     <ul>
       <li>
-        DownloadCentral: Fix Images failing b/c Articles already creates image databases.
+        HtmlView: Support Gallery.
       </li>
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Resolved by</span>: Release fsdb connections after registering new wiki.
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikipedia.org/wiki/Édouard_Manet" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Édouard_Manet</a> <a href="https://en.wikipedia.org/wiki/List_of_tallest_buildings_in_the_world" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/List_of_tallest_buildings_in_the_world</a> <a href="https://en.wikipedia.org/wiki/National_Gallery_of_Art" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/National_Gallery_of_Art</a>
       </dd>
     </dl>
     <ul>
       <li>
-        DownloadCentral: Add new wiki to left-hand sidebar of wikis.
-      </li>
-    </ul>
-    <ul>
-      <li>
-        DownloadCentral: Sort work tasks by add-order after reloading page.
+        DownloadCentral: Show error message if error during download; also allow resume.
       </li>
     </ul>
     <p>
@@ -122,269 +125,45 @@
     </p>
     <ul>
       <li>
-        DownloadCentral: Make minor HTML changes to DownloadInfo, including removing ellipsis and adding URL for wiki.
+        UI: Add Ctrl+P as default keyboard shortcut for Print.
       </li>
     </ul>
     <ul>
       <li>
-        HTML: Remove ellipsis from Wiki Info.
-      </li>
-    </ul>
-    <p>
-      <br>
-    </p>
-    <h2>
-      <span class="mw-headline" id="v3.6.4.1_.282016-06-25.29">v3.6.4.1 (2016-06-25)</span>
-    </h2>
-    <h3>
-      <span class="mw-headline" id="Wiki">Wiki</span>
-    </h3>
-    <ul>
-      <li>
-        Wiki: Publish 2016-06 English Wiktionary, Wikisource, Wikivoyage, Wikiquote, Wikibooks, Wikiversity, Wikinews and Species Wiki.
-      </li>
-    </ul>
-    <dl>
-      <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Special:XowaDownloadCentral.html" id="xolnki_3" title="Special:XowaDownloadCentral" class="xowa-visited">Special:XowaDownloadCentral</a>
-      </dd>
-    </dl>
-    <h3>
-      <span class="mw-headline" id="PC_2">PC</span>
-    </h3>
-    <p>
-      <b>major</b>
-    </p>
-    <ul>
-      <li>
-        DownloadCentral: Fix Download Central failing for multiple tasks.
-      </li>
-    </ul>
-    <dl>
-      <dd>
-        <span style='font-variant:small-caps'>Resolved by</span>: Do not make Http_download_wkr a singleton.
-      </dd>
-    </dl>
-    <ul>
-      <li>
-        DownloadCentral: Add screen to show info for each task.
-      </li>
-    </ul>
-    <dl>
-      <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Special:XowaDownloadCentralInfo%3Ftask_id%3D1.html" id="xolnki_4" title="Special:XowaDownloadCentralInfo?task id=1">Special:XowaDownloadCentralInfo?task id=1</a>
-      </dd>
-    </dl>
-    <ul>
-      <li>
-        DownloadCentral: Fix Mac OS X and Builder Central for vertical-align text / missing bullet points.
-      </li>
-    </ul>
-    <dl>
-      <dd>
-        <span style='font-variant:small-caps'>Resolved by</span>: Specify -webkit-align-items; Specify display:inline-block.
-      </dd>
-    </dl>
-    <ul>
-      <li>
-        HTML Databases: Show redlinks for missing pages.
-      </li>
-    </ul>
-    <dl>
-      <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikipedia.org/wiki/Arthur_Duffey" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Arthur_Duffey</a>
-      </dd>
-    </dl>
-    <ul>
-      <li>
-        HTML Databases: Show Timelines.
-      </li>
-    </ul>
-    <dl>
-      <dd>
-        <span style='font-variant:small-caps'>Resolved by</span>: Add timeline.js if timeline is present.
-      </dd>
-      <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikipedia.org/wiki/Solar_System" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Solar_System</a>
-      </dd>
-    </dl>
-    <ul>
-      <li>
-        HTML Databases: Show Gallery horizontally instead of vertically.
-      </li>
-    </ul>
-    <dl>
-      <dd>
-        <span style='font-variant:small-caps'>Resolved by</span>: Include "mediawiki.page.gallery.css" if page has gallery.
-      </dd>
-      <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wiktionary.org/wiki/head" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/head</a> <a href="https://en.wiktionary.org/wiki/A" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/A</a>
-      </dd>
-    </dl>
-    <p>
-      <b>minor</b>
-    </p>
-    <ul>
-      <li>
-        Template: Show more flag images.
-      </li>
-    </ul>
-    <dl>
-      <dd>
-        <span style='font-variant:small-caps'>Resolved by</span>: Return template_name and template_args if template_name is invalid, not just template_name.
-      </dd>
-      <dd>
-        <span style='font-variant:small-caps'>Example</span>: pass: {{ {{{0}}} | arg_1 | arg_2 }}; fail: {{{{{0}}}}}.
-      </dd>
-      <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikipedia.org/wiki/Flag_of_Greenland" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Flag_of_Greenland</a> <a href="https://en.wikipedia.org/wiki/List_of_flags_by_number_of_colors" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/List_of_flags_by_number_of_colors</a>
-      </dd>
-    </dl>
-    <ul>
-      <li>
-        Tag: Show missing content for pages with apostrophes.
-      </li>
-    </ul>
-    <dl>
-      <dd>
-        <span style='font-variant:small-caps'>Resolved by</span>: Handle apostrophes inside quotes for attributes.
-      </dd>
-      <dd>
-        <span style='font-variant:small-caps'>Example</span>: key="a'b" x&gt; key="a".
-      </dd>
-      <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikisource.org/wiki/The_formative_period_in_Colby's_history" rel="nofollow" class="external free">https://en.wikisource.org/wiki/The_formative_period_in_Colby's_history</a>
-      </dd>
-    </dl>
-    <ul>
-      <li>
-        Template: Show links for next / previous letter in a few dozen en.d pages.
-      </li>
-    </ul>
-    <dl>
-      <dd>
-        <span style='font-variant:small-caps'>Resolved by</span>: Do not add Template: to transcluded missing pages.
-      </dd>
-      <dd>
-        <span style='font-variant:small-caps'>Example</span>: {{:missing}} -&gt; [[:missing]] x&gt; [[Template:Missing]].
-      </dd>
-      <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wiktionary.org/wiki/a" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/a</a>
-      </dd>
-    </dl>
-    <ul>
-      <li>
-        Interwiki: Change abbreviation for "species.wikimedia.org" to "species" not ".species".
+        UI: Automatically save zoom level when using Ctrl+Wheel_Up, Ctrl+Wheel_Down. {detected by Ope30}
       </li>
     </ul>
     <ul>
       <li>
-        Lang: Fix script error on 1 en.d page.
+        UI: Restore font size for tab buttons.
       </li>
     </ul>
-    <dl>
-      <dd>
-        <span style='font-variant:small-caps'>Resolved by</span>: Add "kok" lang.
-      </dd>
-      <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wiktionary.org/wiki/नेपाळ" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/नेपाळ</a>
-      </dd>
-    </dl>
     <p>
       <b>trivial</b>
     </p>
     <ul>
       <li>
-        Setup: Show XOWA img on 32-bit xowa.exe.
+        Log: Add logging statements for search.
+      </li>
+    </ul>
+    <ul>
+      <li>
+        Hzip: Skip manual &lt;h2&gt; if &lt;span&gt; does not have id.
       </li>
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Resolved by</span>: Use 32px ico instead of 512px.
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://fr.wikipedia.org/wiki/Portail:Nord-Amérindiens/Image_sélectionnée" rel="nofollow" class="external free">https://fr.wikipedia.org/wiki/Portail:Nord-Amérindiens/Image_sélectionnée</a>
       </dd>
     </dl>
     <ul>
       <li>
-        HTTP Server: Do not add "#" to end of url when clicking on img links.
+        Hzip: Skip manual &lt;h2&gt; if &lt;h2&gt; has atrs.
       </li>
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Resolved by</span>: Change href='#' to href='javascript:void(0)'.
-      </dd>
-    </dl>
-    <ul>
-      <li>
-        Hzip: Use correct case for html title if video title is lower-case.
-      </li>
-    </ul>
-    <dl>
-      <dd>
-        <span style='font-variant:small-caps'>Example</span>: [[File:a.ogv]] -&gt; "a.ogv" x&gt; "A.ogv".
-      </dd>
-      <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="https://de.wiktionary.org/wiki/fappieren" rel="nofollow" class="external free">https://de.wiktionary.org/wiki/fappieren</a>
-      </dd>
-    </dl>
-    <ul>
-      <li>
-        Hzip: Fix hzip diff message for &lt;/p&gt; &lt;/div&gt;.
-      </li>
-    </ul>
-    <dl>
-      <dd>
-        <span style='font-variant:small-caps'>Resolved by</span>: Do not add &lt;/p&gt; if gallery caption has &lt;hr&gt;.
-      </dd>
-      <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="https://fr.wikiversity.org/wiki/Forfry" rel="nofollow" class="external free">https://fr.wikiversity.org/wiki/Forfry</a>
-      </dd>
-    </dl>
-    <ul>
-      <li>
-        Hzip: Fix hzip diff message for "User talk".
-      </li>
-    </ul>
-    <dl>
-      <dd>
-        <span style='font-variant:small-caps'>Resolved by</span>: Use underscore version of href for custom namespace title.
-      </dd>
-      <dd>
-        <span style='font-variant:small-caps'>Example</span>: "User_talk:A" x&gt; "User talk:A".
-      </dd>
-      <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="https://de.wikibooks.org/wiki/Wikibooks:Benutzersperrung/_InselFahrer" rel="nofollow" class="external free">https://de.wikibooks.org/wiki/Wikibooks:Benutzersperrung/_InselFahrer</a>
-      </dd>
-    </dl>
-    <h3>
-      <span class="mw-headline" id="Server">Server</span>
-    </h3>
-    <p>
-      <b>major</b>
-    </p>
-    <ul>
-      <li>
-        HTTP Server: Add "Download Central".
-      </li>
-    </ul>
-    <dl>
-      <dd>
-        <span style='font-variant:small-caps'>Resolved by</span>: Add support for long-polling.
-      </dd>
-      <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://localhost:8080/home/wiki/Special:XowaDownloadCentral" rel="nofollow" class="external free">http://localhost:8080/home/wiki/Special:XowaDownloadCentral</a>
-      </dd>
-    </dl>
-    <ul>
-      <li>
-        HTTP Server: Show svg and other file types.
-      </li>
-    </ul>
-    <dl>
-      <dd>
-        <span style='font-variant:small-caps'>Resolved by</span>: Add more mime_types like svg, tif, web, etc.
-      </dd>
-      <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://localhost:8080/home/wiki/Special:XowaDownloadCentral" rel="nofollow" class="external free">http://localhost:8080/home/wiki/Special:XowaDownloadCentral</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://fr.wikipedia.org/wiki/Wikipédia:LiveRC/ToDo" rel="nofollow" class="external free">https://fr.wikipedia.org/wiki/Wikipédia:LiveRC/ToDo</a>
       </dd>
     </dl>
     <h3>
@@ -395,35 +174,88 @@
     </p>
     <ul>
       <li>
-        DownloadCentral: Fix Download Central failing for multiple tasks.
-      </li>
-    </ul>
-    <ul>
-      <li>
-        DownloadCentral: Add screen to show info for each task.
-      </li>
-    </ul>
-    <ul>
-      <li>
-        HTML Databases: Show redlinks for missing pages.
+        Setup: Detect external storage card for certain devices (BLU-STUDIO C 5+5 LTE).
       </li>
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikipedia.org/wiki/Arthur_Duffey" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Arthur_Duffey</a>
+        <span style='font-variant:small-caps'>Resolved by</span>: Try "SECONDARY_STORAGE" environment variable if present.
+      </dd>
+    </dl>
+    <p>
+      <b>major</b>
+    </p>
+    <ul>
+      <li>
+        DownloadCentral: Fix WAKE_LOCK not being acquired / released.
+      </li>
+    </ul>
+    <dl>
+      <dd>
+        <span style='font-variant:small-caps'>Resolved by</span>: Always release WAKE_LOCK when task is done; remove WAKE_LOCK from internal hash.
       </dd>
     </dl>
     <ul>
       <li>
-        HTML Databases: Show Timelines.
+        DownloadCentral: Fix negative progress when restarting after failed task.
       </li>
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Resolved by</span>: Add timeline.js if timeline is present.
+        <span style='font-variant:small-caps'>Resolved by</span>: Reset progress at cmd level upon failure.
       </dd>
+    </dl>
+    <ul>
+      <li>
+        Log: Retain only most recent 8 log files.
+      </li>
+    </ul>
+    <ul>
+      <li>
+        General: Do not crash when opening new tab and English Wikipedia is not installed.
+      </li>
+    </ul>
+    <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikipedia.org/wiki/Solar_System" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Solar_System</a>
+        <span style='font-variant:small-caps'>Resolved by</span>: Use 1st installed wiki if English Wikipedia is not available.
+      </dd>
+    </dl>
+    <ul>
+      <li>
+        General: Do not crash when reloading page but SD card has been removed.
+      </li>
+    </ul>
+    <dl>
+      <dd>
+        <span style='font-variant:small-caps'>Resolved by</span>: Add try / catch to Page__on_load_end.
+      </dd>
+    </dl>
+    <ul>
+      <li>
+        General: Do not crash when opening wiki but wiki has been deleted.
+      </li>
+    </ul>
+    <dl>
+      <dd>
+        <span style='font-variant:small-caps'>Resolved by</span>: Add try / catch to OfflinePageStrategy.
+      </dd>
+    </dl>
+    <ul>
+      <li>
+        General: Do not crash when reloading tab but page does not exist.
+      </li>
+    </ul>
+    <p>
+      <b>trivial</b>
+    </p>
+    <ul>
+      <li>
+        Redlinks: Fix null ref in logs when opening special pages.
+      </li>
+    </ul>
+    <dl>
+      <dd>
+        <span style='font-variant:small-caps'>Resolved by</span>: Set "en" as language for home wiki.
       </dd>
     </dl>
     <h3>
@@ -431,7 +263,22 @@
     </h3>
     <ul>
       <li>
-        Source: Change hash classes from Hashtable to HashMap.
+        Source: Fix compilation issues with Eclipse Neon.
+      </li>
+    </ul>
+    <dl>
+      <dd>
+        <span style='font-variant:small-caps'>Resolved by</span>: Split classes into separate files.
+      </dd>
+    </dl>
+    <ul>
+      <li>
+        Source: Refactor gallery classes.
+      </li>
+    </ul>
+    <ul>
+      <li>
+        Source: Make Xop_amp_mgr thread safe.
       </li>
     </ul>
   
@@ -537,4 +384,3 @@
 </div>
 </body>
 </html>
-<!-- force update -->
