--- a/home/wiki/Main_Page.html
+++ b/home/wiki/Main_Page.html
@@ -23,7 +23,7 @@
         </td>
         <td class="mbox-text" style="">
           <p>
-            <span class="mbox-text-span">The XOWA Android app is now on Google Play Store.</span>
+            <span class="mbox-text-span">The XOWA Android app is on the Google Play Store.</span>
           </p>
           <p>
             <span class="mbox-text-span">Please try it out! See: <a href="https://play.google.com/store/apps/details?id=org.xowa" rel="nofollow" class="external free">https://play.google.com/store/apps/details?id=org.xowa</a></span>
@@ -82,28 +82,20 @@
       <span class="mw-headline" id="Release_notes">Release notes</span>
     </h2>
     <p>
-      v3.6.4.2 features the following:
+      v3.7.1.1 features the following:
     </p>
     <ul>
       <li>
-        (PC) Fix Download Central failing on last step of image import
-      </li>
-    </ul>
-    <p>
-      v3.6.4.1 features the following:
-    </p>
-    <ul>
-      <li>
-        (Wiki) 2016-06 English Wiktionary, Wikisource, Wikivoyage, Wikiquote, Wikibooks, Wikiversity, Wikinews and Species Wiki
+        (Wiki) 2016-06 German Wiktionary, Wikisource, Wikivoyage, Wikiquote, Wikibooks, Wikiversity, and Wikinews
       </li>
       <li>
-        (All) Fixes / changes for Download Central including multiple-tasks bug
+        (PC) Support Gallery
       </li>
       <li>
-        (All) Fixes / changes for HTML Databases including better support for Redlinks, Timeline and Gallery
+        (PC &amp; Android) More minor fixes for Download Central including connection disruption and WAKE_LOCK fixes
       </li>
       <li>
-        (PC) Minor parser fixes including tags with apostrophe and missing transluded pages
+        (Android) Multiple fixes for severe crashes
       </li>
     </ul>
     <p>
@@ -194,20 +186,20 @@
     </p>
     <ul>
       <li>
-        v3.6.3 has a new Download page. See <a href="http://xowa.org/home/wiki/Special:XowaDownloadCentral.html" id="xolnki_13" title="Special:XowaDownloadCentral" class="xowa-visited">Download Central</a>
+        v3.6.3 features a Download page. See <a href="http://xowa.org/home/wiki/Special:XowaDownloadCentral.html" id="xolnki_13" title="Special:XowaDownloadCentral" class="xowa-visited">Download Central</a>
       </li>
       <li>
-        v3.3.4 has a new auto-complete address bar. It also has a faster Search system. See <a href="http://xowa.org/home/wiki/App/Search.html" id="xolnki_14" title="App/Search">App/Search</a>
+        v3.3.4 features an auto-complete address bar. It also has a faster Search system. See <a href="http://xowa.org/home/wiki/App/Search.html" id="xolnki_14" title="App/Search">App/Search</a>
       </li>
     </ul>
     <dl>
       <dd>
-        v3.3.4 also uses sqlite 3.8.2
+        v3.3.4 uses sqlite 3.8.2
       </dd>
     </dl>
     <ul>
       <li>
-        v3.1.3 has a new XOWA Android application
+        v3.1.3 features the XOWA Android application
       </li>
       <li>
         v2.8.1 has a language converter dropdown for the Chinese wikis.
@@ -322,7 +314,7 @@
           <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_30" title="Dashboard/Import/Online" class="xowa-visited">Import Online</a>
         </td>
         <td>
-          Import a wiki from a list of 827 known Wikimedia Foundation wikis
+          Import a wiki from a list of 826 known Wikimedia Foundation wikis
         </td>
       </tr>
       <tr>
