--- a/home/wiki/Options.html
+++ b/home/wiki/Options.html
@@ -330,7 +330,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Language.html" id="xolnki_3" title="Options/Language">Language</a>
+              <a href="http://xowa.org/home/wiki/Options/Language.html" id="xolnki_3" title="Options/Language" class="xowa-visited">Language</a>
             </td>
             <td>
               UI Language
@@ -338,7 +338,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Tabs.html" id="xolnki_4" title="Options/Tabs">Tabs</a>
+              <a href="http://xowa.org/home/wiki/Options/Tabs.html" id="xolnki_4" title="Options/Tabs" class="xowa-visited">Tabs</a>
             </td>
             <td>
               Tab appearance and behavior
