--- a/home/wiki/Options/Dev.html
+++ b/home/wiki/Options/Dev.html
@@ -295,7 +295,7 @@ li.active a, li.active a:hover
               Show warnings: <sup id="cite_ref-show_warn_0-0" class="reference"><a href="#cite_note-show_warn-0">[1]</a></sup>
             </td>
             <td>
-              <input xowa_prop="xowa.api.gui.browser.info.warn_enabled" type="checkbox" class="options_checkbox" id='xowa_prop_0' checked='checked'>
+              <input xowa_prop="xowa.api.gui.browser.info.warn_enabled" type="checkbox" class="options_checkbox" id='xowa_prop_0'>
             </td>
           </tr>
           <tr>
@@ -303,7 +303,7 @@ li.active a, li.active a:hover
               Show notes: <sup id="cite_ref-show_note_1-0" class="reference"><a href="#cite_note-show_note-1">[2]</a></sup>
             </td>
             <td>
-              <input xowa_prop="xowa.api.gui.browser.info.note_enabled" type="checkbox" class="options_checkbox" id='xowa_prop_1' checked='checked'>
+              <input xowa_prop="xowa.api.gui.browser.info.note_enabled" type="checkbox" class="options_checkbox" id='xowa_prop_1'>
             </td>
           </tr>
         </table>
