--- a/home/wiki/Options/Shortcuts.html
+++ b/home/wiki/Options/Shortcuts.html
@@ -828,7 +828,7 @@ li.active a, li.active a:hover
               <input id='37_scope' type='text' class='options_textbox' value='Window'>
             </td>
             <td width='50%'>
-              <input id='37_ipt' type='text' class='options_textbox' value='None' onchange="ipt_changed('37');" accesskey=',' style='width:99%'>
+              <input id='37_ipt' type='text' class='options_textbox' value='Ctrl + P' onchange="ipt_changed('37');" accesskey=',' style='width:99%'>
             </td>
           </tr>
           <tr>
